--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 
 # BEGIN WordPress
-# Las directivas (líneas) entre `BEGIN WordPress` y `END WordPress` son
-# generadas dinámicamente, y sólo debe ser modificadas a través de los filtros de WordPress.
-# Cualquier cambio en las directivas entre estos marcadores se sobrescribirá.
+# Las directivas (líneas) entre `BEGIN WordPress` y `END WordPress` se generan dinámicamente
+# , y solo se deberían modificar mediante filtros de WordPress.
+# Cualquier cambio en las directivas que hay entre esos marcadores se sobreescribirán.
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /freia/
